He creado una paquete(constant) con enums, que contienen las imágenes y colores utilizados hasta el momento. También he conseguido darle sensación de botón a los labels aceptar y cancelar

--- a/FINAL_PROJECT/ABCLibrary/bin/.gitignore
+++ b/FINAL_PROJECT/ABCLibrary/bin/.gitignore
@@ -1,13 +1,5 @@
-/windows/
+/presentation/
+/constants/
 /login/
 /main/
-/General.class
-/general/
-/presentation/
-/database/
-/programm/
-/users/
-/users_windows/
-/components/
-/Assistant/
-/assistant/
+/constant/
